# rusty-chess-engine

./: .gitignore  Cargo.toml  README.md  data.txt  out  perft  perft.csv
old/src/: board.rs  cell.rs  enums.rs  main.rs  move.rs
src/: args.rs  bitboard.rs  board.rs  enums.rs  helpers.rs  lookip_table_gen.rs  lookup_table.rs  lookuptable.rs  main.rs  move.rs  move_validator.rs  movegenerator.rs  movevalidator.rs
src/board/: bitboard.rs  bits.rs  display.rs  endgame_detection.rs  fen.rs  mod.rs  move_generation.rs  move_validation.rs  perft.rs  piece_movement.rs
src/enums/: color.rs  endgame.rs  mod.rs
src/enums/board/: antidiagonal.rs  diagonal.rs  direction.rs  file.rs  mod.rs  rank.rs  square.rs
src/enums/castling/: castle.rs  castling_rights.rs  mod.rs
src/enums/piece/: mod.rs  piece.rs  piece_type.rs
src/lookup_table/: generator.rs  mod.rs
src/movegenerator/: mod.rs
src/movevalidator/: mod.rs
src/perft/: mod.rs  stockfish.rs
