[package]
name = "rusty-chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
text_io = "0.1.12"
